--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 {% load static %}
-    <h1 class="text-center"> Andrew`s Portfolio</h1>
+    <h1 class="text-center"> Andrew`s Portfolio )))</h1>
 
 
 <br>
